bb-67, bb-72/ Fix displaying no assets message and aligning close button with TonConnectUI

--- a/src/shared/asset-selector/asset-selector.module.css
+++ b/src/shared/asset-selector/asset-selector.module.css
@@ -82,6 +82,8 @@
 
 .assets_list {
     height: 100%;
+    justify-content: center;
+    display: flex;
 }
 
 .footer_container {
